--- a/TimSort/TimSort.csproj
+++ b/TimSort/TimSort.csproj
@@ -57,8 +57,8 @@
       <DependentUpon>TimSort.tt</DependentUpon>
     </Compile>
     <Compile Include="TimSortBase.cs" />
+    <Compile Include="TimSortExtenderOld.cs" />
     <Compile Include="TimSortExtender.cs" />
-    <Compile Include="TimSortExtender2.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="License.txt" />
