--- a/source/TimSort/TimSort.csproj
+++ b/source/TimSort/TimSort.csproj
@@ -60,7 +60,6 @@
       <DependentUpon>TimSort.tt</DependentUpon>
     </Compile>
     <Compile Include="TimSortBase.cs" />
-    <Compile Include="TimSortExtenderOld.cs" />
     <Compile Include="TimSortExtender.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -77,7 +76,7 @@
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
-    <PostBuildEvent>if $(ConfigurationName)==Release xcopy /y /d $(TargetPath) $(SolutionDir)release\</PostBuildEvent>
+    <PostBuildEvent/>
   </PropertyGroup>
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
